--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "statpad",
-  "homepage": "http://habibayoub.github.io/statpad",
+  "homepage": "https://habibayoub.github.io/statpad/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
