--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "statpad",
-  "homepage": "https://habibayoub.github.io/statpad/",
+  "homepage": "https://habibayoub.github.io/statpad/statpadFinal",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,6 +11,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^5.3.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
